# env-sensor-node

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: channel.rs  main.rs  network.rs  sensors.rs
src/sensors/: fast.rs  slow.rs
