[package]
name = "large-bed"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f401cc",
"unstable-pac", "memory-x", "time-driver-any", "time", "exti" ]  }
embassy-net = { version = "0.4.0", features = ["defmt", "proto-ipv4", "tcp", "dhcpv4","medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m",
"executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.0"}

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
static_cell = "2.0.0"

[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "511bee7" }
embassy-net = {git = "https://github.com/embassy-rs/embassy", rev = "511bee7" }
embassy-net-wiznet = {git = "https://github.com/embassy-rs/embassy", rev = "511bee7" }
embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "511bee7" }
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "511bee7" }
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "511bee7" }
embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "511bee7" }

[profile.dev]
opt-level = "s"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
